# 15code-verify

./: .gitignore  LICENSE  README.md
.github/workflows/: build-windows.yml  ci.yml  publish-pypi.yml  release.yml
apps/api/: requirements.txt
apps/api/verify_api/: main.py  store.py
apps/api/verify_api/static/: index.html  policy.html  share.html  tos.html
apps/api/verify_api/static/css/: style.css
apps/cli/: pyproject.toml  verify.spec
apps/cli/verify_cli/: __init__.py  main.py
apps/web/: next.config.mjs  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/download/: page.tsx
apps/web/app/leaderboard/: page.tsx
apps/web/app/verify/: page.tsx
data/15code_catalog/: models.yaml
data/baselines/: README.md
data/probe_bank/: README.md
deploy/: DEPLOY_SOP.md
deploy/docker/: .env.example  Dockerfile.api  Dockerfile.web  README.md  docker-compose.yml
deploy/install/: build-artifacts.sh  remote-install.sh  update.sh
deploy/nginx/: verify.15code.com.conf
deploy/systemd/: 15code-verify.service
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  LEADERBOARD_POLICY.md  PROBE_DESIGN.md  SECURITY.md  TERMS_OF_SERVICE.md
scripts/: dev.sh  setup.sh
